# kaggle

./: README.md  main.py
MattWorkshop/: TestClass.py  helloworld.py  testscript.py
PersonalTestbeds/MattWorkshop/: DataManipulationTest.py  IrisAnalysis.py  LibraryDemo.py  test.txt  testscript.py
PersonalTestbeds/jaboi/: Cargo.toml
PersonalTestbeds/jaboi/src/: main.rs
