[package]
name = "jaboi"
version = "0.1.0"
authors = ["repl.it user <replituser@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0.123", features = ["derive"] }
plotters = "^0.3.0"